# pgdog

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  centroids.json  docker-compose.yml  pgbouncer.ini  pgdog-sharded.toml  pgdog.toml  pyrightconfig.json  userlist.txt  users-sharded.toml  users.toml
integration/rust/: Cargo.toml  dev.sh  run.sh
integration/rust/src/: setup.rs
integration/rust/tests/: mod.rs
integration/rust/tests/integration/: auth.rs  fake_transactions.rs  mod.rs  reload.rs  syntax_error.rs
integration/rust/tests/sqlx/: bad_auth.rs  mod.rs  params.rs  select.rs
integration/rust/tests/tokio_postgres/: copy.rs  mod.rs  nulls.rs  prepared.rs  select.rs
pgdog/: Cargo.toml  build.rs  pgdog
pgdog-plugin/: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
pgdog-plugin/include/: plugin.h  types.h
pgdog-plugin/src/: bindings.rs  c_api.rs  config.rs  copy.rs  input.rs  lib.rs  order_by.rs  output.rs  parameter.rs  plugin.h  plugin.rs  query.rs  route.rs
pgdog/src/: channel.rs  cli.rs  comms.rs  lib.rs  main.rs  plugin.rs  sighup.rs  state.rs  util.rs
pgdog/src/admin/: backend.rs  error.rs  mod.rs  parser.rs  pause.rs  prelude.rs  reload.rs  reset_query_cache.rs  set.rs  setup_schema.rs  show_clients.rs  show_config.rs  show_lists.rs  show_peers.rs  show_pools.rs  show_prepared_statements.rs  show_query_cache.rs  show_servers.rs  show_stats.rs  show_version.rs  shutdown.rs
pgdog/src/auth/: error.rs  md5.rs  mod.rs
pgdog/src/auth/scram/: client.rs  error.rs  mod.rs  server.rs  state.rs
pgdog/src/backend/: databases.rs  error.rs  mod.rs  prepared_statements.rs  reload_notify.rs  server.rs  server_options.rs  stats.rs
pgdog/src/backend/pool/: address.rs  ban.rs  cleanup.rs  cluster.rs  comms.rs  config.rs  connection.rs  error.rs  guard.rs  healthcheck.rs  inner.rs  mapping.rs  mod.rs  monitor.rs  oids.rs  pool.rs  pool_impl.rs  replicas.rs  request.rs  shard.rs  state.rs  stats.rs  taken.rs  waiting.rs
pgdog/src/backend/pool/connection/: aggregate.rs  binding.rs  buffer.rs  mirror.rs  mod.rs  multi_shard.rs  sort_buffer.rs
pgdog/src/backend/pool/connection/multi_shard/: context.rs  mod.rs  test.rs
pgdog/src/backend/pool/test/: mod.rs  replica.rs
pgdog/src/backend/protocol/: buffer.rs  mod.rs  protocol_message.rs  state.rs
pgdog/src/backend/replication/: buffer.rs  config.rs  error.rs  mod.rs  sharded_tables.rs
pgdog/src/backend/schema/: columns.rs  columns.sql  mod.rs  queries.rs  relation.rs  relations.sql  setup.sql  table.rs  tables.sql  trigger_function.rs  trigger_function.sql
pgdog/src/config/: convert.rs  error.rs  mod.rs  overrides.rs  ranges.rs  shards.rs  url.rs
pgdog/src/frontend/: buffer.rs  client.rs  comms.rs  connected_client.rs  error.rs  listener.rs  mod.rs  prepared_statements.rs  query_logger.rs  stats.rs
pgdog/src/frontend/client/: counter.rs  inner.rs  mod.rs  timeouts.rs
pgdog/src/frontend/client/test/: mod.rs
pgdog/src/frontend/prepared_statements/: error.rs  global_cache.rs  mod.rs  request.rs  rewrite.rs
pgdog/src/frontend/router/: context.rs  copy.rs  error.rs  mod.rs  request.rs  round_robin.rs  route.rs  search_path.rs
pgdog/src/frontend/router/parser/: aggregate.rs  cache.rs  column.rs  command.rs  comment.rs  copy.rs  csv_buffer.rs  error.rs  function.rs  insert.rs  key.rs  lexer.rs  mod.rs  multi_tenant.rs  order_by.rs  prepare.rs  query.rs  route.rs  table.rs  tokens.rs  tuple.rs  value.rs  where_clause.rs
pgdog/src/frontend/router/parser/binary/: header.rs  mod.rs  stream.rs  tuple.rs
pgdog/src/frontend/router/parser/csv/: iterator.rs  mod.rs  record.rs
pgdog/src/frontend/router/parser/rewrite/: mod.rs
pgdog/src/frontend/router/sharding/: context.rs  context_builder.rs  error.rs  ffi.rs  hashfn.c  mod.rs  operator.rs  tables.rs  value.rs  vector.rs
pgdog/src/net/: bidirectional.rs  decoder.rs  error.rs  mod.rs  parameter.rs  stream.rs  tls.rs  tweaks.rs
pgdog/src/net/discovery/: error.rs  listener.rs  message.rs  mod.rs
pgdog/src/net/messages/: backend_key.rs  bind.rs  close.rs  close_complete.rs  command_complete.rs  copy_data.rs  copy_done.rs  copy_fail.rs  data_row.rs  describe.rs  empty_query_response.rs  error_response.rs  execute.rs  flush.rs  hello.rs  mod.rs  notice_response.rs  parameter_description.rs  parameter_status.rs  parse.rs  parse_complete.rs  payload.rs  query.rs  rfq.rs  row_description.rs  sync.rs  terminate.rs
pgdog/src/net/messages/auth/: mod.rs  password.rs
pgdog/src/net/messages/data_types/: bigint.rs  integer.rs  interval.rs  mod.rs  numeric.rs  text.rs  timestamp.rs  timestamptz.rs  uuid.rs  vector.rs
pgdog/src/net/messages/replication/: hot_standby_feedback.rs  keep_alive.rs  mod.rs  status_update.rs  xlog_data.rs
pgdog/src/net/messages/replication/logical/: begin.rs  commit.rs  delete.rs  insert.rs  mod.rs  relation.rs  string.rs  truncate.rs  tuple_data.rs  update.rs
pgdog/src/plugin/: api.rs  mod.rs  types.rs
pgdog/src/stats/: clients.rs  http_server.rs  logger.rs  mod.rs  open_metric.rs  pools.rs  query_cache.rs
pgdog/src/tui/: clients.rs
pgdog/tests/: admin.sh  cert.pem  copy.csv  pgbench-select-1.sql  pgbench.sh  psql.sh  pypg.py  rails_schema_cache.txt  rails_tests.rb  requirements.txt  users.csv
pgdog/tests/async_python/: pypg.py  run.sh
pgdog/tests/copy/: copy.csv  embeddings.csv  gen_copy.py
pgdog/tests/pgbouncer/: Gemfile  README.md  benchmark_spec.rb  pgbouncer.ini  pgdog.toml  run.sh  users.toml
pgdog/tests/pgbouncer/config/: database.yaml
pgdog/tests/rails_tests/: Gemfile  rails_tests.rb
pgdog/tests/sharding/: sharding.sh
pgdog/tests/tls/: key.pem
pgdog/tests/vector/: README.md  centroids.json  clusters.txt  measure_recall.py  read_parquet.py  requirements.txt  run.sh  select.sql  setup.sh  test_embeddings.json  venv.sh
plugins/pgdog-routing/: Cargo.toml  build.rs
plugins/pgdog-routing/postgres_hash/: hashfn.c
plugins/pgdog-routing/src/: comment.rs  copy.rs  lib.rs  order_by.rs  sharding_function.rs
(+239 files in other folders)
