[package]
name = "pgdog-plugin"
version = "0.1.1"
edition = "2021"
license = "MIT"
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]
readme = "README.md"
repository = "https://github.com/levkk/pgdog"
homepage = "https://pgdog.dev"
description = "pgDog plugin interface and helpers"
include = ["src/", "include/", "build.rs", "LICENSE", "README.md"]

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
libloading = "0.8"
libc = "0.2"
tracing = "0.1"

[build-dependencies]
bindgen = "0.71.0"
