[package]
name = "pgdog"
version = "0.1.0"
edition = "2021"
description = "Modern PostgreSQL proxy and pooler."
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]
license = "AGPL-3.0"

[dependencies]
pin-project = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
parking_lot = "0.12"
thiserror = "2"
bytes = "1"
# mlua = "0.10"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
async-trait = "*"
rand = "*"
once_cell = "1"
tokio-rustls = "0.26"
rustls-native-certs = "0.8"
rustls-pki-types = "*"
arc-swap = "1"
toml = "0.8"
pgdog-plugin = { path = "../pgdog-plugin" }
