[package]
name = "rust"
version = "0.1.0"
edition = "2024"

[lib]
test = true

[dependencies]
tokio-postgres = {version = "0.7.13", features = ["with-uuid-1"]}
sqlx = { version = "*", features = ["postgres", "runtime-tokio", "tls-native-tls"]}
tokio = { version = "1", features = ["full"]}
futures-util = "*"
uuid  = "*"
serial_test = "3"
