[package]
name = "pgdog-routing"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"
authors = ["Lev Kokotov <lev.kokotov@gmail.com>"]
description = "De facto pgDog plugin for routing queries"

[dependencies]
pgdog-plugin = { path = "../../pgdog-plugin", version = "0.1.1" }
pg_query = "6.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
rand = "0.8"
once_cell = "1"
regex = "1"
uuid = { version = "1", features = ["v4"] }
csv = "1"

[lib]
crate-type = ["rlib", "cdylib"]

[build-dependencies]
cc = "1"

[dev-dependencies]
postgres = {version = "0.19", features = ["with-uuid-1"] }
